# acnhc

./: .gitignore  Cargo.toml  README.md  database.sql
common/: README.md
database/: Cargo.toml  all-artworks.txt  all-recipes.txt  fossils.txt
database-contributions/: bugs.txt  clothing.txt  fish.txt  flowers.txt  furniture.txt  recipes.txt  wallfloor.txt
database/recipes/: categories.txt  equipment.txt  housewares.txt  misc.txt  other.txt  parse.rb  rooms.txt  tools.txt  wallmount.txt
fossil/: Gemfile  README.md  db.rb  fossilmajig.rb
rest/: Cargo.toml  README.md
rest/migrations/2020-08-22-023238_init/: down.sql  up.sql
rest/src/: db.rs  lib.rs  main.rs  models.rs  schema.rs  web.rs
ruby/: db.rb
src/: bug.rs  clothing.rs  fish.rs  flower.rs  fossil.rs  furniture.rs  item.rs  lib.rs  main.rs  recipe.rs
templates/: base.html.tera  catalog.html.tera  index.html.tera  navbar.html.tera
wasm/: Cargo.toml  README.md
wasm/src/: api.rs  app.rs  lib.rs  routes.rs  types.rs
wasm/src/components/: homemeta_card.rs  item_card.rs  mod.rs  sidebar.rs
wasm/src/pages/: about.rs  artwork.rs  catalog.rs  deepsea.rs  equipment.rs  fish.rs  floors.rs  fossils.rs  home.rs  housewares.rs  insects.rs  login.rs  miscellaneous.rs  mod.rs  music.rs  other.rs  recipes.rs  rugs.rs  tools.rs  wallmounted.rs  wallpaper.rs
web/: Cargo.toml  README.md  Rocket.toml  database.sql
web/database-contributions/: fossils.txt  items.txt
web/src/: lib.rs  main.rs  types.rs
web/templates/: alias.html.tera  allreport.html.tera  base.html.tera  edit.html.tera  editrecipes.html.tera  fossilallreport.html.tera  fossiledit.html.tera  fossilreport.html.tera  gotreport.html.tera  index.html.tera  login.html.tera  navbar.html.tera  needreport.html.tera  report.html.tera  reportrecipes.html.tera
(+22 files in other folders)
