[package]
name = "acnhc-rest"
version = "0.1.0"
authors = ["Fox Box <foxboxpdx@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
rocket_codegen = "0.4.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "2.1.1"
uuid = { version = "0.8", features = ["v4"] }
diesel = { version = "1.4.5", features = ["sqlite", "r2d2"]}
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "serve", "diesel_sqlite_pool"]