[package]
name = "acnhc-wasm"
version = "0.1.0"
authors = ["Fox Box <foxboxpdx@gmail.com>"]
edition = "2018"
description = "ACNH Catalog app using rust-wasm"
license = "Apache 2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
yew-router = "0.14.0"
wasm-bindgen = "0.2"
anyhow = "1.0.32"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
wee_alloc = "0.4.5"
