[package]
name = "acnhc-web"
version = "0.0.1"
authors = ["Fox Box <foxboxpdx@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["tera_templates", "serve", "diesel_sqlite_pool"]
